Fixed image issue on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,4 +99,9 @@ a:hover:after {
     ul li{
         padding: 15px 0;
     }
+
+    img{
+        width: 180px;
+        height: 180px;
+    }
 }
